--- a/Week-4/day-1/Express-project/package.json
+++ b/Week-4/day-1/Express-project/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "4.16.2"
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "express": "4.16.2",
+    "mocha": "^5.2.0"
   }
 }
